--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.0"
+    "mongoose": "^8.18.0",
+    "multer": "^2.0.2",
+    "sharp": "^0.34.4"
   }
 }
